[package]
name = "luckybox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.0.0"
crossterm = "0.25.0"
itertools = "0.10.3"
rand = "0.8.5"
tabled = { version = "0.8.0", features = ["color"] }
tui = "0.19.0"
unicode-width = "0.1.9"
